--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Mandatory settings
 
-name: Chalk
-paginate: 25
+name: The Tamriel Guild of Scholars
+paginate: 1
 paginate_path: "/posts/page/:num/"
 url: # add site url http://example.com/
 blog_theme: light # Or use dark
@@ -10,7 +10,7 @@ blog_theme: light # Or use dark
 
 discus_identifier: # Add your Disqus identifier
 ga_analytics: # Add your GA Tracking Id
-rss_enabled: true # Change to false if not
+rss_enabled: false # Change to false if not
 about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
 social:
   dribbble: # Add your Dribbble handle
